style.css
body { 
  background: url(img/OFF14_Austin_Tal_Alejandro_BrittanyA_02.jpg) no-repeat center center fixed; 
  -webkit-background-size: cover?;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

img {
  max-width: 100%;
}

h1, h2 {
  color: #373d3f;
  font-size: 4em;
}

footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  background-color: #d8d9d4;
}

.contactUsFooter {
  /*margin-bottom: 300px;*/
}

.contactUsFooterMobile p {
  text-align: center;
  font-size: 2em;
}

.contactUsFooter p {
  font-size: 2vw;
  text-align: left;
  float: left;
  margin-top: 10px;
}

/*.contactUsFooter {
  margin-left: 2%;
  position: absolute;
  bottom: 15px;
  z-index: 1000;
}*/

a:link {
  color: #373d3f;
}

.extendLogo {
  margin-bottom: -3%;
}

.header {
  margin-bottom: 4%;
}

.header h2 {
  font-size: 3em;
  color: #1ebaed;
}

.header img {
  margin-bottom: 2%;
}

.centered {
  text-align: center;
}

.centeredImg {
  text-align: center;
  margin-top: 3%;
  margin-bottom: 0;
}

.date {
  padding-top: 1%;
}

.mobileSubmit h2 {
  float: left; 
  margin-right: 10%;
}

.social {
  color: #373d3f;
  margin: 0 auto;
  text-align: center;
}


.socialIcon {
  margin: .5% 1% auto 1%;
}

.laReserveLogo {
  float: right;
  padding-right: 2%;
  margin-top: 1%;
}

.social a:hover {
  color: #373d3f;
}

.contactUsFooter a:hover {
  color: #f2f3f4;
}

.meetupLogo {
  height: 50px;
  /*margin-left: -19px;*/
}

.formDiv {
  text-align: center;
}

.formDiv form {
  display: inline-block;
  width: 100%;
}

.formDiv input {
  margin-left: 2%;
  padding-top: 25px;

}

.formDiv button {
  margin-left: 1%;
  margin-bottom: 25px;
}

.updates > h2 {
  float: left;
  margin-right: 40px;
}

.contactUs {
  clear: both;
}

.firstSocial {
  /*margin-left: 10%;*/
}

@media all and (max-width: 1400px) {
  .header img {
    float: none;
    margin-right: auto;
    margin-left: auto;
    margin-bottom: 3%;
    margin-top: -3%;
  }
  
}

@media all and (max-width: 1000px) {
  .socialIcon {
    text-align: center;
  }

  .laReserveLogoMobile {
    margin-left: 15px;
  }
}

@media all and (max-width: 900px) {
  .laReserveLogo {
    margin-top: 15px;
    width: 15%;
    float: right;
  }

  .socialIcon {
    font-size: 1em !important;
    margin-top: 10px;
  }

  .meetupLogo {
    height: 30px;
    margin-top: 10px;
  }
}

@media all and (max-width: 768px) {

  h2 {
    font-size: 2.5em;
    line-height: 2em;
  }
  
  .extendLogo {
    width: 80%;
  }

  .updates > h2 {
    float: none;
  }

  .social {
    padding-left: 0;
  }

  .social img {
    /*float: none;*/
  }

  .header img {
    width: 30%;

  }

}

@media all and (max-width: 650px) {
  h2 {
    line-height: 1.5em;
  }
}

@media all and (max-width: 450px) {
  .contaceInfo > h2 {
    font-size: 2em;
  }
}

@media all and (max-height: 650px) {
  footer {
    bottom: auto;
  }

  .contactUsFooter p {
    float: none;
  }

  .laReserveLogo {
    float: none;
  }

}

@media all and (max-height: 850px) {
  .date {
    margin-top: 0;
  }

  .contaceInfo {
    margin-bottom: 25px; 
  }
}

@media all and (max-height: 1050px) {

  body { 
    background: url(img/OFF14_Austin_Tal_Alejandro_BrittanyA_03.png) no-repeat center center fixed; 
    -webkit-background-size: cover?;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
  }
}

@media all and (max-width: 1420px) and (min-width: 768px) {
  body { 
    background: url(img/OFF14_Austin_Tal_Alejandro_BrittanyA_03.png) no-repeat center center fixed; 
    -webkit-background-size: cover?;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
  }
}

